--- a/JetCar_Segmentation_MobileNetV2.ipynb
+++ b/JetCar_Segmentation_MobileNetV2.ipynb
@@ -8,7 +8,8 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -29,6 +30,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/StefanW0815/PublicTest/blob/main/JetCar_Segmentation_MobileNetV2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -229,8 +240,7 @@
         "\n",
         "!ls gdrive\n",
         "!ls \"gdrive/My Drive\"\n",
-        "!ls \"gdrive/My Drive/JetCar/\"\n",
-        "!ls sample_data"
+        "!ls \"gdrive/My Drive/JetCar/\""
       ],
       "execution_count": null,
       "outputs": []
@@ -797,7 +807,7 @@
       "source": [
         "if os.path.exists(DATA_PATH + MODEL_WEIGHT_FILE_NAME): \n",
         "    model.load_weights(DATA_PATH + MODEL_WEIGHT_FILE_NAME)\n",
-        "    print('model weights loaded!')"
+        "    print('Last model weights loaded!')"
       ],
       "execution_count": null,
       "outputs": []
@@ -907,7 +917,7 @@
         "scrolled": false
       },
       "source": [
-        "EPOCHS = 10\n",
+        "EPOCHS = 1000\n",
         "STEPS_PER_EPOCH = TRAINSET_SIZE // BATCH_SIZE\n",
         "VALIDATION_STEPS = VALSET_SIZE // BATCH_SIZE\n",
         "PREDICTION_STEPS = PREDSET_SIZE // BATCH_SIZE\n",
@@ -1121,40 +1131,7 @@
         "id": "5roLmFjzSLrS"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "43IHzJXXSLrV"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "j6saw334SLrX"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zsc94n-9SLrZ"
-      },
-      "source": [
-        ""
+        "print(\"All Done!\")"
       ],
       "execution_count": null,
       "outputs": []
