--- a/JetCar_Segmentation_MobileNetV2.ipynb
+++ b/JetCar_Segmentation_MobileNetV2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "name": "Copy of segmentation.ipynb",
+      "name": "JetCar_Segmentation_MobileNetV2.ipynb",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
@@ -55,24 +55,19 @@
         "id": "NEWs8JXRuGex"
       },
       "source": [
-        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",       
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/tutorials/images/segmentation\">\n",
-        "    <img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />\n",
-        "    View on TensorFlow.org</a>\n",
-        "  </td>\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/tutorials/images/segmentation.ipynb\">\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/StefanW0815/PublicTest/blob/main/JetCar_Segmentation_MobileNetV2.ipynb\">\n",
         "    <img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />\n",
         "    Run in Google Colab</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/docs/blob/master/site/en/tutorials/images/segmentation.ipynb\">\n",
+        "    <a target=\"_blank\" href=\"https://github.com/StefanW0815/PublicTest/blob/main/JetCar_Segmentation_MobileNetV2.ipynb\">\n",
         "    <img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />\n",
         "    View source on GitHub</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "    <a href=\"https://storage.googleapis.com/tensorflow_docs/docs/site/en/tutorials/images/segmentation.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\" />Download notebook</a>\n",
+        "    <a href=\"https://storage.googleapis.com/github.com/StefanW0815/PublicTest/blob/main/JetCar_Segmentation_MobileNetV2.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\" />Download notebook</a>\n",
         "  </td>\n",
         "</table>"
       ]
@@ -101,8 +96,7 @@
         "\n",
         "The code is based on following examples:\n",
         "    https://www.tensorflow.org/tutorials/images/segmentation\n",
-        "    \n",
-        "    https://yann-leguilly.gitlab.io/post/2019-12-14-tensorflow-tfdata-segmentation/\n"
+        "    https://yann-leguilly.gitlab.io/post/2019-12-14-tensorflow-tfdata-segmentation\n"
       ]
     },
     {
