--- a/JetCar_Segmentation_MobileNetV2.ipynb
+++ b/JetCar_Segmentation_MobileNetV2.ipynb
@@ -87,12 +87,12 @@
         "id": "V2i0hkSrSLot"
       },
       "source": [
-        "This notebook uses Semantic Segmentation to create a U-Net model. Training and validation data consist of a pair of\n",
+        "This notebook uses Semantic Segmentation to train a U-Net model. Each training and validation data pair consist of\n",
         "\n",
         "    a jpg image with 3 channels (RGB)\n",
         "    a png mask with 1 channel contining the class values for each pixel\n",
         "    \n",
-        "In addition there is a set of images in a third set to create predicted masks for as feedback.\n",
+        "In addition there is a set of images in a third set to create predicted masks as feedback for segmentation mask adjustments.\n",
         "\n",
         "The code is based on following examples:\n",
         "* https://www.tensorflow.org/tutorials/images/segmentation\n",
