--- a/JetCar_Segmentation_MobileNetV2.ipynb
+++ b/JetCar_Segmentation_MobileNetV2.ipynb
@@ -773,7 +773,7 @@
       },
       "source": [
         "## Train the model\n",
-        "Now, all that is left to do is to compile and train the model. The loss being used here is `losses.SparseCategoricalCrossentropy(from_logits=True)`. The reason to use this loss function is because the network is trying to assign each pixel a label, just like multi-class prediction. In the true segmentation mask, each pixel has either a {0,1,2}. The network here is outputting three channels. Essentially, each channel is trying to learn to predict a class, and `losses.SparseCategoricalCrossentropy(from_logits=True)` is the recommended loss for \n",
+        "Now, all that is left to do is to compile and train the model. The loss being used here is `losses.SparseCategoricalCrossentropy(from_logits=True)`. The reason to use this loss function is because the network is trying to assign each pixel a label, just like multi-class prediction. In the true segmentation mask, each pixel has one of the values between 0 and N_CLASSES-1. The network here is outputting N_CLASSES channels. Essentially, each channel is trying to learn to predict a class, and `losses.SparseCategoricalCrossentropy(from_logits=True)` is the recommended loss for \n",
         "such a scenario. Using the output of the network, the label assigned to the pixel is the channel with the highest value. This is what the create_mask function is doing."
       ]
     },
@@ -1034,7 +1034,7 @@
         "id": "7BVXldSo-0mW"
       },
       "source": [
-        "Let's make some predictions. In the interest of saving time, the number of epochs was kept small, but you may set this higher to achieve more accurate results."
+        "Using the training results prediction masks will be generated for a separete set of images than for training and validation. This can be the original set of images before augmentation. The prediction can be used as feedback to fine tune the segmentation mask generation."
       ]
     },
     {
