--- a/JetCar_Segmentation_MobileNetV2.ipynb
+++ b/JetCar_Segmentation_MobileNetV2.ipynb
@@ -204,7 +204,7 @@
         "id": "18GQXNxaTUUw"
       },
       "source": [
-        "The data can be loaded from a local drive directly with path definitions below or downloaded from a google drive as shown in cells below."
+        "The data can be downloaded from a google drive as shown in cells below. Alternatively the path definitions can be changed to get data from a local drive."
       ]
     },
     {
@@ -213,8 +213,6 @@
         "id": "mRsZcrr-SLpF"
       },
       "source": [
-        "#GDRIVE_MOUNT = 'C:/Users/stefa/Python/tf-gpu/JetCar/Data/'\n",
-        "#GDRIVE_PATH = GDRIVE_MOUNT\n",
         "GDRIVE_MOUNT = '/content/gdrive/'\n",
         "GDRIVE_PATH = 'gdrive/My Drive/JetCar/'\n",
         "\n",
@@ -259,8 +257,7 @@
       },
       "source": [
         "#Local drive path definitions if data is available locally\n",
-        "DATA_PATH = \"~/tensorflow_datasets/JetCar/\"\n",
-        "DATA_PATH = os.path.expanduser(DATA_PATH).replace('\\\\','/')\n",
+        "DATA_PATH = \"/content/JetCar/\"\n",
         "print(DATA_PATH)\n",
         "if not os.path.exists(DATA_PATH):\n",
         "    os.makedirs(DATA_PATH)"
@@ -640,7 +637,7 @@
         "## Define the model\n",
         "The model being used here is a modified U-Net. A U-Net consists of an encoder (downsampler) and decoder (upsampler). In-order to learn robust features, and reduce the number of trainable parameters, a pretrained model can be used as the encoder. Thus, the encoder for this task will be a pretrained MobileNetV2 model, whose intermediate outputs will be used, and the decoder will be the upsample block already implemented in TensorFlow Examples in the [Pix2pix tutorial](https://github.com/tensorflow/examples/blob/master/tensorflow_examples/models/pix2pix/pix2pix.py). \n",
         "\n",
-        "The reason to output three channels is because there are three possible labels for each pixel. Think of this as multi-classification where each pixel is being classified into three classes."
+        "The reason to output N_CLASSES channels is because there are three possible labels for each pixel. Think of this as multi-classification where each pixel is being classified into N_CLASSES classes."
       ]
     },
     {
@@ -785,7 +782,7 @@
       "source": [
         "model = unet_model(OUTPUT_CHANNELS)\n",
         "\n",
-        "model.compile(optimizer=Adam(learning_rate=0.0001),\n",
+        "model.compile(optimizer=Adam(learning_rate=1e-5),\n",
         "              #optimizer='adam',\n",
         "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])"
