--- a/JetCar_Segmentation_MobileNetV2.ipynb
+++ b/JetCar_Segmentation_MobileNetV2.ipynb
@@ -961,8 +961,8 @@
       },
       "source": [
         "# Load the TensorBoard notebook extension.\n",
-        "#%load_ext tensorboard\n",
-        "#%tensorboard --logdir logs"
+        "%load_ext tensorboard\n",
+        "%tensorboard --logdir logs"
       ],
       "execution_count": null,
       "outputs": []
