--- a/JetCar_Segmentation_MobileNetV2.ipynb
+++ b/JetCar_Segmentation_MobileNetV2.ipynb
@@ -8,8 +8,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -33,16 +32,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/StefanW0815/PublicTest/blob/main/JetCar_Segmentation_MobileNetV2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "rCSP-dbMw88x"
       },
       "source": [
@@ -55,7 +44,7 @@
         "id": "NEWs8JXRuGex"
       },
       "source": [
-        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",       
+        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
         "  <td>\n",
         "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/StefanW0815/PublicTest/blob/main/JetCar_Segmentation_MobileNetV2.ipynb\">\n",
         "    <img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />\n",
@@ -277,7 +266,10 @@
         "VALIDATION_SUBDIR = \"Val/\"\n",
         "RECORDING_PATH = DATA_PATH +\"Recording/\"\n",
         "PREDICTION_PATH = DATA_PATH +\"Prediction/\"\n",
-        "MODEL_WEIGHT_FILE_NAME = 'best_model.h5'\n",
+        "MODEL_WEIGHT_FILE_NAME = 'JetCar_Best_Model_Weights.h5'\n",
+        "MODEL_SUB_DIR = 'Model'\n",
+        "MODEL_PATH = DATA_PATH + MODEL_SUB_DIR\n",
+        "MODEL_ZIP_FILE_NAME = 'JetCar_Model.zip'\n",
         "PREDICTION_ZIP_FILE_NAME = 'Prediction.zip'"
       ],
       "execution_count": null,
@@ -388,10 +380,10 @@
         "id": "WrK2kdrTSLpk"
       },
       "source": [
-        "if os.path.exists(GDRIVE_PATH + MODEL_WEIGHT_FILE_NAME):\n",
-        "    print('Copying %s from %s...'%(MODEL_WEIGHT_FILE_NAME, GDRIVE_PATH))\n",
-        "    tf.io.gfile.copy(os.path.normpath(GDRIVE_PATH + MODEL_WEIGHT_FILE_NAME), \n",
-        "                 os.path.normpath(DATA_PATH + MODEL_WEIGHT_FILE_NAME), True)"
+        "#if os.path.exists(GDRIVE_PATH + MODEL_WEIGHT_FILE_NAME):\n",
+        "#    print('Copying %s from %s...'%(MODEL_WEIGHT_FILE_NAME, GDRIVE_PATH))\n",
+        "#    tf.io.gfile.copy(os.path.normpath(GDRIVE_PATH + MODEL_WEIGHT_FILE_NAME), \n",
+        "#                 os.path.normpath(DATA_PATH + MODEL_WEIGHT_FILE_NAME), True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -538,7 +530,7 @@
         "id": "J0BpQ8uwHXwb"
       },
       "source": [
-        "BATCH_SIZE = 10\n",
+        "BATCH_SIZE = 250\n",
         "BUFFER_SIZE = 1000\n",
         "TRAIN_LENGTH = TRAINSET_SIZE\n",
         "STEPS_PER_EPOCH = TRAIN_LENGTH // BATCH_SIZE\n",
@@ -785,7 +777,7 @@
         "model.compile(optimizer=Adam(learning_rate=1e-5),\n",
         "              #optimizer='adam',\n",
         "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-        "              metrics=['accuracy'])"
+        "              metrics='sparse_categorical_accuracy')"
       ],
       "execution_count": null,
       "outputs": []
@@ -796,9 +788,9 @@
         "id": "Ud0ZtrJCSLqe"
       },
       "source": [
-        "if os.path.exists(DATA_PATH + MODEL_WEIGHT_FILE_NAME): \n",
-        "    model.load_weights(DATA_PATH + MODEL_WEIGHT_FILE_NAME)\n",
-        "    print('Last model weights loaded!')"
+        "if os.path.exists(GDRIVE_PATH + MODEL_WEIGHT_FILE_NAME): \n",
+        "    model.load_weights(GDRIVE_PATH + MODEL_WEIGHT_FILE_NAME)\n",
+        "    print('Last best model weights loaded!')"
       ],
       "execution_count": null,
       "outputs": []
@@ -815,10 +807,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sw82qF1Gcovr"
+        "id": "ht8Lm_fDZ9F5"
       },
       "source": [
-        "#tf.keras.utils.plot_model(model, show_shapes=True)"
+        "tf.keras.utils.plot_model(model, show_shapes=True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -947,7 +939,7 @@
         "    # if no accuracy improvements we can stop the training directly\n",
         "    tf.keras.callbacks.EarlyStopping(patience=10, verbose=1),\n",
         "    # to save checkpoints\n",
-        "    tf.keras.callbacks.ModelCheckpoint(DATA_PATH + MODEL_WEIGHT_FILE_NAME, \n",
+        "    tf.keras.callbacks.ModelCheckpoint(GDRIVE_PATH + MODEL_WEIGHT_FILE_NAME, \n",
         "                                       verbose=1, save_best_only=True, save_weights_only=True)\n",
         "]\n"
       ],
@@ -988,10 +980,10 @@
         "id": "MwKBnYaESLrA"
       },
       "source": [
-        "if os.path.exists(DATA_PATH + MODEL_WEIGHT_FILE_NAME): \n",
-        "    print('Copying %s to %s...'%(MODEL_WEIGHT_FILE_NAME, GDRIVE_PATH))\n",
-        "    tf.io.gfile.copy(os.path.normpath(DATA_PATH + MODEL_WEIGHT_FILE_NAME), \n",
-        "                     os.path.normpath(GDRIVE_PATH + MODEL_WEIGHT_FILE_NAME), True)"
+        "#if os.path.exists(DATA_PATH + MODEL_WEIGHT_FILE_NAME): \n",
+        "#    print('Copying %s to %s...'%(MODEL_WEIGHT_FILE_NAME, GDRIVE_PATH))\n",
+        "#    tf.io.gfile.copy(os.path.normpath(DATA_PATH + MODEL_WEIGHT_FILE_NAME), \n",
+        "#                     os.path.normpath(GDRIVE_PATH + MODEL_WEIGHT_FILE_NAME), True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1002,7 +994,6 @@
         "id": "CQ8aGwUMSLrC"
       },
       "source": [
-        "import zipfile\n",
         "if os.path.exists(logdir): \n",
         "    print(\"Compressing logs\")\n",
         "    zipFileName = logdir+\".zip\"\n",
@@ -1037,6 +1028,40 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "KKqutUyBnGBr"
+      },
+      "source": [
+        "if os.path.exists(GDRIVE_PATH + MODEL_WEIGHT_FILE_NAME): \n",
+        "    model.load_weights(GDRIVE_PATH + MODEL_WEIGHT_FILE_NAME)\n",
+        "    print('Best model weights re-loaded!')\n",
+        "    \n",
+        "model.save(MODEL_PATH)\n",
+        "print(\"Model saved!\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tww3GYJFnGBt"
+      },
+      "source": [
+        "print(\"Compressing model\")\n",
+        "zipFileName = DATA_PATH + MODEL_ZIP_FILE_NAME \n",
+        "zipObj = zipfile.ZipFile(zipFileName, 'w')\n",
+        "zipObj.write(MODEL_PATH)\n",
+        "zipObj.close()\n",
+        "print('Copying %s to %s...'%(zipFileName, GDRIVE_PATH))\n",
+        "tf.io.gfile.copy(os.path.normpath(zipFileName), \n",
+        "                os.path.normpath(GDRIVE_PATH + MODEL_ZIP_FILE_NAME), True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "pCTQbSEgSLrF"
       },
       "source": [
@@ -1064,7 +1089,6 @@
         "id": "4ux9za2YSLrK"
       },
       "source": [
-        "import zipfile\n",
         "zipObj = zipfile.ZipFile(PREDICTION_PATH+PREDICTION_ZIP_FILE_NAME, 'w')"
       ],
       "execution_count": null,
